Font color contrast fix

--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -359,11 +359,13 @@ html .clear-completed:active {
 
 .author {
   text-align: center;
+  color: #4d4d4d;
+  font-weight: 400;
   margin-bottom: 20px;
 }
 
 .author a {
-  color: #286371;
+  color: #397482;
 }
 /*
 	Hack to remove background from Mobile Safari.
